Added title={{...}} to preserve capital letters.

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,5 @@
 @inproceedings{breunig2000lof,
-  title={{LOF}: identifying density-based local outliers},
+  title={{LOF: identifying density-based local outliers}},
   author={Breunig, Markus M and Kriegel, Hans-Peter and Ng, Raymond T and Sander, J{\"o}rg},
   booktitle={ACM sigmod record},
   volume={29},
@@ -10,7 +10,7 @@
 }
 
 @article{benjamini1995controlling,
-  title={Controlling the false discovery rate: a practical and powerful approach to multiple testing},
+  title={{Controlling the false discovery rate: a practical and powerful approach to multiple testing}},
   author={Benjamini, Yoav and Hochberg, Yosef},
   journal={Journal of the Royal statistical society: series B (Methodological)},
   volume={57},
@@ -21,7 +21,7 @@
 }
 
 @inproceedings{kneib2018scission,
-  title={Scission: Signal characteristic-based sender identification and intrusion detection in automotive networks},
+  title={{Scission: Signal characteristic-based sender identification and intrusion detection in automotive networks}},
   author={Kneib, Marcel and Huth, Christopher},
   booktitle={Proceedings of the 2018 ACM SIGSAC Conference on Computer and Communications Security},
   pages={787--800},
@@ -30,7 +30,7 @@
 }
 
 @inproceedings{lazarevic2003comparative,
-  title={A comparative study of anomaly detection schemes in network intrusion detection},
+  title={{A comparative study of anomaly detection schemes in network intrusion detection}},
   author={Lazarevic, Aleksandar and Ertoz, Levent and Kumar, Vipin and Ozgur, Aysel and Srivastava, Jaideep},
   booktitle={Proceedings of the 2003 SIAM International Conference on Data Mining},
   pages={25--36},
@@ -39,7 +39,7 @@
 }
 
 @inproceedings{uluagac2013passive,
-  title={A passive technique for fingerprinting wireless devices with wired-side observations},
+  title={{A passive technique for fingerprinting wireless devices with wired-side observations}},
   author={Uluagac, A Selcuk and Radhakrishnan, Sakthi V and Corbett, Cherita and Baca, Antony and Beyah, Raheem},
   booktitle={2013 IEEE conference on communications and network security (CNS)},
   pages={305--313},
@@ -48,7 +48,7 @@
 }
 
 @article{pimentel2014review,
-  title={A review of novelty detection},
+  title={{A review of novelty detection}},
   author={Pimentel, Marco AF and Clifton, David A and Clifton, Lei and Tarassenko, Lionel},
   journal={Signal Processing},
   volume={99},
@@ -58,7 +58,7 @@
 }
 
 @inproceedings{jaynes2016automating,
-  title={Automating ecu identification for vehicle security},
+  title={{Automating ecu identification for vehicle security}},
   author={Jaynes, Michael and Dantu, Ram and Varriale, Roland and Evans, Nathaniel},
   booktitle={2016 15th IEEE International Conference on Machine Learning and Applications (ICMLA)},
   pages={632--635},
@@ -67,7 +67,7 @@
 }
 
 @inproceedings{cho2016fingerprinting,
-  title={Fingerprinting electronic control units for vehicle intrusion detection},
+  title={{Fingerprinting electronic control units for vehicle intrusion detection}},
   author={Cho, Kyong-Tak and Shin, Kang G},
   booktitle={25th {USENIX} Security Symposium},
   pages={911--927},
@@ -75,7 +75,7 @@
 }
 
 @article{choi2018identifying,
-  title={Identifying {ECUs} using inimitable characteristics of signals in controller area networks},
+  title={{Identifying ECUs using inimitable characteristics of signals in controller area networks}},
   author={Choi, Wonsuk and Jo, Hyo Jin and Woo, Samuel and Chun, Ji Young and Park, Jooyoung and Lee, Dong Hoon},
   journal={IEEE Transactions on Vehicular Technology},
   volume={67},
@@ -86,7 +86,7 @@
 }
 
 @inproceedings{hautamaki2004outlier,
-  title={Outlier detection using k-nearest neighbour graph},
+  title={{Outlier detection using k-nearest neighbour graph}},
   author={Hautamaki, Ville and Karkkainen, Ismo and Franti, Pasi},
   booktitle={Proceedings of the 17th International Conference on Pattern Recognition, 2004. ICPR 2004.},
   volume={3},
@@ -96,7 +96,7 @@
 }
 
 @inproceedings{liu2008isolation,
-  title={Isolation forest},
+  title={{Isolation forest}},
   author={Liu, Fei Tony and Ting, Kai Ming and Zhou, Zhi-Hua},
   booktitle={2008 Eighth IEEE International Conference on Data Mining},
   pages={413--422},
@@ -105,7 +105,7 @@
 }
 
 @article{scikit-learn,
- title={Scikit-learn: Machine Learning in {P}ython},
+ title={{Scikit-learn: Machine Learning in Python}},
  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
@@ -117,7 +117,7 @@
 }
 
 @article{kang2016intrusion,
-  title={Intrusion detection system using deep neural network for in-vehicle network security},
+  title={{Intrusion detection system using deep neural network for in-vehicle network security}},
   author={Kang, Min-Joo and Kang, Je-Won},
   journal={PloS one},
   volume={11},
@@ -128,7 +128,7 @@
 }
 
 @article{srinivasan2005neural,
-  title={Neural-network-based signature recognition for harmonic source identification},
+  title={{Neural-network-based signature recognition for harmonic source identification}},
   author={Srinivasan, D and Ng, WS and Liew, AC},
   journal={IEEE Transactions on Power Delivery},
   volume={21},
@@ -139,7 +139,7 @@
 }
 
 @article{gerdes2012physical,
-  title={Physical-layer identification of wired Ethernet devices},
+  title={{Physical-layer identification of wired Ethernet devices}},
   author={Gerdes, Ryan M and Mina, Mani and Russell, Steve F and Daniels, Thomas E},
   journal={IEEE Transactions on Information Forensics and Security},
   volume={7},
@@ -150,7 +150,7 @@
 }
 
 @article{murvay2014source,
-  title={Source identification using signal characteristics in controller area networks},
+  title={{Source identification using signal characteristics in controller area networks}},
   author={Murvay, Pal-Stefan and Groza, Bogdan},
   journal={IEEE Signal Processing Letters},
   volume={21},
@@ -161,7 +161,7 @@
 }
 
 @article{bagnall2017great,
-  title={The great time series classification bake off: a review and experimental evaluation of recent algorithmic advances},
+  title={{The great time series classification bake off: a review and experimental evaluation of recent algorithmic advances}},
   author={Bagnall, Anthony and Lines, Jason and Bostrom, Aaron and Large, James and Keogh, Eamonn},
   journal={Data Mining and Knowledge Discovery},
   volume={31},
@@ -172,14 +172,14 @@
 }
 
 @article{narayanan2015using,
-  title={Using data analytics to detect anomalous states in vehicles},
+  title={{Using data analytics to detect anomalous states in vehicles}},
   author={Narayanan, Sandeep Nair and Mittal, Sudip and Joshi, Anupam},
   journal={arXiv preprint arXiv:1512.08048},
   year={2015}
 }
 
 @article{ureten2007wireless,
-  title={Wireless security through RF fingerprinting},
+  title={{Wireless security through RF fingerprinting}},
   author={Ureten, Oktay and Serinken, Nur},
   journal={Canadian Journal of Electrical and Computer Engineering},
   volume={32},
@@ -190,7 +190,7 @@
 }
 
 @inproceedings{cho2017viden,
-  title={Viden: Attacker identification on in-vehicle networks},
+  title={{Viden: Attacker identification on in-vehicle networks}},
   author={Cho, Kyong-Tak and Shin, Kang G},
   booktitle={Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
   pages={1109--1123},
@@ -199,7 +199,7 @@
 }
 
 @article{choi2018voltageids,
-  title={VoltageIDS: Low-level communication characteristics for automotive intrusion detection system},
+  title={{VoltageIDS: Low-level communication characteristics for automotive intrusion detection system}},
   author={Choi, Wonsuk and Joo, Kyungho and Jo, Hyo Jin and Park, Moon Chan and Lee, Dong Hoon},
   journal={IEEE Transactions on Information Forensics and Security},
   volume={13},
@@ -210,7 +210,7 @@
 }
 
 @inproceedings{sagong2018cloaking,
-  title={Cloaking the clock: emulating clock skew in controller area networks},
+  title={{Cloaking the clock: emulating clock skew in controller area networks}},
   author={Sagong, Sang Uk and Ying, Xuhang and Clark, Andrew and Bushnell, Linda and Poovendran, Radha},
   booktitle={Proceedings of the 9th ACM/IEEE International Conference on Cyber-Physical Systems},
   pages={32--42},
@@ -219,7 +219,7 @@
 }
 
 @inproceedings{diehl2003svm,
-  title={{SVM} incremental learning, adaptation and optimization},
+  title={{SVM incremental learning, adaptation and optimization}},
   author={Diehl, Christopher P and Cauwenberghs, Gert},
   booktitle={Proceedings of the International Joint Conference on Neural Networks, 2003.},
   volume={4},
@@ -229,7 +229,7 @@
 }
 
 @article{hall2005radio,
-  title={Radio frequency fingerprinting for intrusion detection in wireless networks},
+  title={{Radio frequency fingerprinting for intrusion detection in wireless networks}},
   author={Hall, Jeyanthi and Barbeau, Michel and Kranakis, Evangelos},
   journal={IEEE Transactions on Defendable and Secure Computing},
   volume={12},
@@ -239,7 +239,7 @@
 }
 
 @article{ellis2001characteristics,
-  title={Characteristics of radio transmitter fingerprints},
+  title={{Characteristics of radio transmitter fingerprints}},
   author={Ellis, KJ and Serinken, Nur},
   journal={Radio Science},
   volume={36},
@@ -250,7 +250,7 @@
 }
 
 @article{hall2003detection,
-  title={Detection of transient in radio frequency fingerprinting using signal phase},
+  title={{Detection of transient in radio frequency fingerprinting using signal phase}},
   author={Hall, Jeyanthi and Barbeau, Michel and Kranakis, Evangelos},
   journal={Wireless and Optical Communications},
   pages={13--18},
@@ -259,7 +259,7 @@
 }
 
 @article{xu2015device,
-  title={Device fingerprinting in wireless networks: Challenges and opportunities},
+  title={{Device fingerprinting in wireless networks: Challenges and opportunities}},
   author={Xu, Qiang and Zheng, Rong and Saad, Walid and Han, Zhu},
   journal={IEEE Communications Surveys \& Tutorials},
   volume={18},
@@ -270,7 +270,7 @@
 }
 
 @inproceedings{brik2008wireless,
-  title={Wireless device identification with radiometric signatures},
+  title={{Wireless device identification with radiometric signatures}},
   author={Brik, Vladimir and Banerjee, Suman and Gruteser, Marco and Oh, Sangho},
   booktitle={Proceedings of the 14th ACM international conference on Mobile computing and networking},
   pages={116--127},
@@ -279,7 +279,7 @@
 }
 
 @article{kohno2005remote,
-  title={Remote physical device fingerprinting},
+  title={{Remote physical device fingerprinting}},
   author={Kohno, Tadayoshi and Broido, Andre and Claffy, Kimberly C},
   journal={IEEE Transactions on Dependable and Secure Computing},
   volume={2},
@@ -290,7 +290,7 @@
 }
 
 @article{lukavs2006digital,
-  title={Digital camera identification from sensor pattern noise},
+  title={{Digital camera identification from sensor pattern noise}},
   author={Luk{\'a}{\v{s}}, Jan and Fridrich, Jessica and Goljan, Miroslav},
   journal={IEEE Transactions on Information Forensics and Security},
   volume={1},
@@ -300,7 +300,7 @@
 }
 
 @article{li2010source,
-  title={Source camera identification using enhanced sensor pattern noise},
+  title={{Source camera identification using enhanced sensor pattern noise}},
   author={Li, Chang-Tsun},
   journal={IEEE Transactions on Information Forensics and Security},
   volume={5},
@@ -311,21 +311,21 @@
 }
 
 @inproceedings{dey2014accelprint,
-  title={{AccelPrint}: Imperfections of Accelerometers Make Smartphones Trackable.},
+  title={{AccelPrint: Imperfections of Accelerometers Make Smartphones Trackable.}},
   author={Dey, Sanorita and Roy, Nirupam and Xu, Wenyuan and Choudhury, Romit Roy and Nelakuditi, Srihari},
   booktitle={NDSS},
   year={2014}
 }
 
 @article{bojinov2014mobile,
-  title={Mobile device identification via sensor fingerprinting},
+  title={{Mobile device identification via sensor fingerprinting}},
   author={Bojinov, Hristo and Michalevsky, Yan and Nakibly, Gabi and Boneh, Dan},
   journal={arXiv preprint arXiv:1408.1416},
   year={2014}
 }
 
 @inproceedings{das2014you,
-  title={Do you hear what {I} hear?: Fingerprinting smart devices through embedded acoustic components},
+  title={{Do you hear what I hear?: Fingerprinting smart devices through embedded acoustic components}},
   author={Das, Anupam and Borisov, Nikita and Caesar, Matthew},
   booktitle={Proceedings of the 2014 ACM SIGSAC Conference on Computer and Communications Security},
   pages={441--452},
@@ -334,14 +334,14 @@
 }
 
 @inproceedings{das2016tracking,
-  title={Tracking Mobile Web Users Through Motion Sensors: Attacks and Defenses.},
+  title={{Tracking Mobile Web Users Through Motion Sensors: Attacks and Defenses.}},
   author={Das, Anupam and Borisov, Nikita and Caesar, Matthew},
   booktitle={NDSS},
   year={2016}
 }
 
 @article{miller2015remote,
-  title={Remote exploitation of an unaltered passenger vehicle},
+  title={{Remote exploitation of an unaltered passenger vehicle}},
   author={Miller, Charlie and Valasek, Chris},
   journal={Black Hat USA},
   volume={2015},
@@ -352,7 +352,7 @@
 % ARINC SPEC: https://www.aviation-ia.com/products/429p1-19-digital-information-transfer-system-dits-part-1-functional-description-electrical
 
 @article{fuchs2012evolution,
-  title={The evolution of avionics networks from {ARINC} 429 to {AFDX}},
+  title={{The evolution of avionics networks from ARINC 429 to AFDX}},
   author={Fuchs, Christian M and others},
   journal={Innovative Internet Technologies and Mobile Communications (IITM), and Aerospace Networks (AN)},
   volume={65},
@@ -361,7 +361,7 @@
 }
 
 @article{thanthry2005aviation,
-  title={Aviation data networks: security issues and network architecture},
+  title={{Aviation data networks: security issues and network architecture}},
   author={Thanthry, Nagaraja and Pendse, Ravi},
   journal={IEEE Aerospace and Electronic Systems Magazine},
   volume={20},
@@ -373,14 +373,14 @@
 
 @online{astronautics2019edcu,
   author={{Astronautics C.A. LTD}},
-  title={Astronautics {EDCU} Brochure},
+  title={{Astronautics EDCU Brochure}},
   year=2019,
   url={http://www.astronautics.co.il/sites/default/files/edcu.pdf},
   urldate={2019-09-14}
 }
 
 @article{langner2011stuxnet,
-  title={Stuxnet: Dissecting a cyberwarfare weapon},
+  title={{Stuxnet: Dissecting a cyberwarfare weapon}},
   author={Langner, Ralph},
   journal={IEEE Security \& Privacy},
   volume={9},
@@ -391,7 +391,7 @@
 }
 
 @inproceedings{muter2011entropy,
-  title={Entropy-based anomaly detection for in-vehicle networks},
+  title={{Entropy-based anomaly detection for in-vehicle networks}},
   author={M{\"u}ter, Michael and Asaj, Naim},
   booktitle={2011 IEEE Intelligent Vehicles Symposium (IV)},
   pages={1110--1115},
@@ -401,14 +401,14 @@
 
 @manual{bosch1991canbus,
     organization={Robert Bosch GmbH},
-    title={{CAN} specification},
+    title={{CAN specification}},
     year=1991,
     note={v2.0}
 }
 
 @manual{arinc2004arinc429,
     organization={Aeronautical Radio {INC}.},
-    title={Mark 33 digital information transfer system (DITS)},
+    title={{Mark 33 digital information transfer system (DITS)}},
     note={{ARINC} specification 429 part 1-17},
     year=2004,
     month=May,
@@ -417,13 +417,13 @@
 
 @manual{united1986milstd1553,
     organization={United States Department of Defence},
-    title={MIL-STD-1553 digital time division command/response multiplex data bus},
+    title={{MIL-STD-1553 digital time division command/response multiplex data bus}},
     year=1986,
     month=sep,  
 }
 
 @article{paalanen2006feature,
-  title={Feature representation and discrimination based on Gaussian mixture model probability densities—practices and algorithms},
+  title={{Feature representation and discrimination based on Gaussian mixture model probability densities—practices and algorithms}},
   author={Paalanen, Pekka and Kamarainen, Joni-Kristian and Ilonen, Jarmo and K{\"a}lvi{\"a}inen, Heikki},
   journal={Pattern Recognition},
   volume={39},
@@ -434,7 +434,7 @@
 }
 
 @inproceedings{scholkopf2000support,
-  title={Support vector method for novelty detection},
+  title={{Support vector method for novelty detection}},
   author={Sch{\"o}lkopf, Bernhard and Williamson, Robert C and Smola, Alex J and Shawe-Taylor, John and Platt, John C},
   booktitle={Advances in neural information processing systems},
   pages={582--588},
@@ -443,7 +443,7 @@
 
 @online{astronautics2019home,
   author={{Astronautics C.A. LTD}},
-  title={home page},
+  title={{home page}},
   year=2019,
   url={http://www.astronautics.com},
   urldate={2019-09-14}
@@ -451,7 +451,7 @@
 
 @online{excalibur2019m4k429rtx,
   author={{Excalibur Systems}},
-  title={M4K429RTx Test and Simulation Module},
+  title={{M4K429RTx Test and Simulation Module}},
   year=2019,
   url={https://www.mil-1553.com/m4k429rtx},
   urldate={2019-09-14}
@@ -459,7 +459,7 @@
 
 @online{holt2019evaluation,
   author={{Holt Integrated Circuits INC.}},
-  title={{ADK}-3200: {HI}-3200 AVIONICS DATA MANAGEMENT ENGINE EVALUATION BOARD},
+  title={{ADK-3200: HI-3200 AVIONICS DATA MANAGEMENT ENGINE EVALUATION BOARD}},
   year=2011,
   url={http://www.holtic.com/product/p/pb/15-adk-3200-hi-3200-avionics-data-management-engine-evaluation-board.aspx},
   urldate={2019-09-14}
@@ -472,7 +472,7 @@ publisher = {John Wiley \& Sons, Ltd},
 booktitle = {Civil Avionics Systems},
 isbn = {9781118341803},
 year = {2013},
-title = {Chapter 3. Data Bus Networks},
+title = {{Chapter 3. Data Bus Networks}},
 language = {eng},
 address = {Chichester, UK},
 author = {Moir, Ian and Seabridge, Allan and Jukes, Malcolm},
@@ -487,12 +487,12 @@ ISBN={9780849384387},
 Publisher={CRC Press},
 Series={The Electrical Engineering Handbook Series},
 BookTitle={Avionics: Elements, Software and Functions},
-Title={Chapter 2. {ARINC} Specification 429 Mark 33 Digital Information Transfer System},
+Title={{Chapter 2. ARINC Specification 429 Mark 33 Digital Information Transfer System}},
 Year={2007},
 }
 
 @article{pearson1901liii,
-  title={LIII. On lines and planes of closest fit to systems of points in space},
+  title={{LIII. On lines and planes of closest fit to systems of points in space}},
   author={Pearson, Karl},
   journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
   volume={2},
@@ -503,7 +503,7 @@ Year={2007},
 }
 
 @article{costin2012ghost,
-  title={Ghost in the Air (Traffic): On insecurity of {ADS-B} protocol and practical attacks on {ADS-B} devices},
+  title={{Ghost in the Air (Traffic): On insecurity of ADS-B protocol and practical attacks on ADS-B devices}},
   author={Costin, Andrei and Francillon, Aur{\'e}lien},
   journal={Black Hat USA},
   pages={1--12},
@@ -511,7 +511,7 @@ Year={2007},
 }
 
 @inproceedings{smith2020view,
-  title={A View from the Cockpit: Exploring Pilot Reactions to Attacks on Avionic Systems},
+  title={{A View from the Cockpit: Exploring Pilot Reactions to Attacks on Avionic Systems}},
   author={Smith, Matthew and Strohmeier, Martin and Harman, Jonathan and Lenders, Vincent and Martinovic, Ivan},
   booktitle={Network and Distributed Systems Security (NDSS) Symposium}, 
   address={San Diego, CA, USA},
@@ -520,8 +520,8 @@ Year={2007},
 }
 
 @article{gilboa-markevich2020hardware,
-        title={Hardware Fingerprinting for the ARINC 429 Avionic Bus},
-        author={Nimrod Gilboa-Markevich and Avishai Wool},
-        journal={arXiv preprint arXiv:2003.12456},
-        year={2020}
+  title={{Hardware Fingerprinting for the ARINC 429 Avionic Bus}},
+  author={Nimrod Gilboa-Markevich and Avishai Wool},
+  journal={arXiv preprint arXiv:2003.12456},
+  year={2020}
 }
