Renamed appendix Tables -> Tables and Images

--- a/main.tex
+++ b/main.tex
@@ -698,7 +698,7 @@ This work was supported in part by a grant from the Interdisciplinary Cyber Rese
 \appendix
 
 \newpage
-\section{Tables} \label{appendix:Tables}
+\section{Tables and Images} \label{appendix:Tables}
 
   \begin{table}
     \caption{Voltage Thresholds per Segment Type}
