Figures in appendix are numbered differently.

--- a/main.tex
+++ b/main.tex
@@ -297,7 +297,7 @@
   Using a Keysight DSO9254A scope, all signals were sampled at 50Msa/s at a scope bandwidth of 25MHz. The probes are 500MHz, 10M\(\Omega\), 11pF. Each line was sampled individually. We further downsampled digitally by a factor of 10 to a rate of 5 MSa/s using a 30 point FIR filter with Hamming window.
   
   % [NGM-2]
-  The transmitters and receivers were connected through a custom board that exposes the wires, which we fabricated for this purpose (see Figure \ref{fig:SetupImage}).
+  The transmitters and receivers were connected through a custom board that exposes the wires, which we fabricated for this purpose (Figure \ref{fig:SetupImage} Appendix \ref{appendix:Tables}).
   
 %  \begin{figure}[t]
 %    \centering
@@ -696,6 +696,8 @@ This work was supported in part by a grant from the Interdisciplinary Cyber Rese
 \bibliography{biblio} 
 
 \appendix
+\renewcommand\thefigure{\Roman{figure}}
+\setcounter{figure}{0}
 
 \newpage
 \section{Tables and Images} \label{appendix:Tables}
