Rephrased dormant -> latent

--- a/main.tex
+++ b/main.tex
@@ -248,7 +248,7 @@
 
   % [NGM-2]
   \textbf{A Rogue Transmitter}
-  In this type of attack an adversary replaces a legitimate transmitter LRU by a rogue one. During an initial dormant phase of the attack, the new device imitates the behavior of the original transmitter, transmitting data exactly as requested, in order to remain hidden. 
+  In this type of attack an adversary replaces a legitimate transmitter LRU by a rogue one. During an initial latent phase of the attack, the new device imitates the behavior of the original transmitter, transmitting data exactly as requested, in order to remain hidden. 
   %Only 
   % [NGM]
   Later,
